syntax = "proto3";

option csharp_namespace = "WebCamServer.Protos";

service FaceService {
  rpc DetectFacePose (DetectFaceRequest) returns (DetectFaceResponse);
  rpc GenerateModel (GenerateModelRequest) returns (GenerateModelResponse);
  rpc PredictFaceMultiple () return ();
}


// Detec
message DetectFaceRequest {
  string imagePath = 1;
}

message DetectFaceResponse {
  string result = 1;
}

message GenerateModelRequest {
  string nameModel = 1;
  string typeSave = 2;
  string folderPath = 3;
}

message GenerateModelResponse {
  bool success = 1;
}


